Changed pet_extension.html name to popup.html, changed app.js name to popup.js

--- a/popup.html
+++ b/popup.html
@@ -6,7 +6,7 @@
         <title>Study Pet</title>
     </head>
   <body>
-    <script src="app.js"></script>
+    <script src="popup.js"></script>
     <h1>Study Pet</h1>
     <div class="image-container left-align">
         <img src="cat_animated.gif" alt="Cat Singing" width="250" />
