Fixed the extension icon so it showed up and fixed the progress bars. Added tab icon images.

--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,9 @@
     <div class="image-container left-align">
         <img src="cat_animated.gif" alt="Cat Singing" width="250" />
         <p class="centred-text">Larry</p>
+    </div>
 
+    <div class="stack-container left-align">
     <!-- XP bar -->
       <div class="progress-container centred-element">
         <div class="progress-label left-align">XP</div>
@@ -24,11 +26,8 @@
         <div class="progress-num centred-text" id="xpNum">0 / 100</div>
       </div>
     <!---------------->
-
-    </div>
-
     <!-- Health Bar -->
-      <div class="progress-container left-align">
+      <div class="progress-container">
         <div class="progress-label left-align">Health</div>
           <div class="progress-bar">
             <div class="xp-fill" id="healthFill"></div>
@@ -38,7 +37,7 @@
   <!---------------->
 
   <!-- Hunger Bar -->
-      <div class="progress-container left-align">
+      <div class="progress-container">
         <div class="progress-label left-align">Hunger</div>
           <div class="progress-bar">
             <div class="xp-fill" id="hungerFill"></div>
@@ -46,6 +45,7 @@
         <div class="progress-num centred-text" id="hungerNum">0 / 100</div>
       </div>
   <!---------------->
+    </div>
 
 
   </body>
