Fixed tabs spacing

--- a/popup.html
+++ b/popup.html
@@ -13,7 +13,14 @@
 <h1>Study Pet</h1>
 
 <div class="tabs">
-  <input type="image" src="tab_icons/house_icon.png" />
+  <input type="image" src="tab_icons/home.png" width="60" height="60"/>
+  <input type="image" src="tab_icons/food_basket.png" width="60" height="60" />
+  <input type="image" src="tab_icons/leaderboard.png" width="60" height="60" />
+  <input type="image" src="tab_icons/pet_gallery.png" width="60" height="60" />
+  <input type="image" src="tab_icons/shop.png" width="60" height="60" />
+  <input type="image" src="tab_icons/pomodoro.png" width="60" height="60" />
+  </button>
+
 </div>
 
 <div class="stack-columns">
