--- a/popup.html
+++ b/popup.html
@@ -14,12 +14,30 @@
 
 <!-- Tabs -->
 <div class="tabs">
-  <button class="tab" id="home-button"><img src="tab_icons/home.png" draggable="false" alt="Home"></button>
-  <button class="tab" id="pomodoro-button"><img src="tab_icons/pomodoro.png" draggable="false" alt="Pomodoro"></button>
-  <button class="tab" id="food-button"><img src="tab_icons/food.png" draggable="false" alt="Food"></button>
-  <button class="tab" id="shop-button"><img src="tab_icons/shop.png" draggable="false" alt="Shop"></button>
-  <button class="tab" id="pets-button"><img src="tab_icons/pets.png" draggable="false" alt="Pets"></button>
-  <button class="tab" id="ranking-button"><img src="tab_icons/ranking.png" draggable="false" alt="Ranking"></button>
+  <div>
+    <button class="tab" id="home-button"><img src="tab_icons/home.png" draggable="false" alt="Home"></button>
+    <p class="tab-text centred-text" id="home-text">Home</p>
+  </div>
+  <div>
+    <button class="tab" id="pomodoro-button"><img src="tab_icons/pomodoro.png" draggable="false" alt="Pomodoro"></button>
+    <p class="tab-text centred-text" id="pomodoro-text">Pomodoro</p>
+  </div>
+  <div>
+    <button class="tab" id="food-button"><img src="tab_icons/food.png" draggable="false" alt="Food"></button>
+    <p class="tab-text centred-text" id="food-text">Food Basket</p>
+  </div>
+  <div>
+    <button class="tab" id="shop-button"><img src="tab_icons/shop.png" draggable="false" alt="Shop"></button>
+    <p class="tab-text centred-text" id="shop-text">Shop</p>
+  </div>
+  <div>
+    <button class="tab" id="pets-button"><img src="tab_icons/pets.png" draggable="false" alt="Pets"></button>
+    <p class="tab-text centred-text" id="pets-text">Pet Gallery</p>
+  </div>
+  <div>
+    <button class="tab" id="leaderboard-button"><img src="tab_icons/leaderboard.png" draggable="false" alt="Leaderboard"></button>
+    <p class="tab-text centred-text" id="leaderboard-text">Leaderboard</p>
+  </div>
 </div>
 
 <!-- Home Tab -->
@@ -73,8 +91,8 @@
 <!-- Pets Tab -->
 <div class="tab-content" id="pets-tab"></div>
 
-<!-- Ranking Tab -->
-<div class="tab-content" id="ranking-tab"></div>
+<!-- Leaderboard Tab -->
+<div class="tab-content" id="leaderboard-tab"></div>
 
 </body>
 </html>
