Added current tab indicator

--- a/popup.html
+++ b/popup.html
@@ -17,26 +17,32 @@
   <div>
     <button class="tab" id="home-button"><img src="tab_icons/home.png" draggable="false" alt="Home"></button>
     <p class="tab-text centred-text" id="home-text">Home</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
   <div>
     <button class="tab" id="pomodoro-button"><img src="tab_icons/pomodoro.png" draggable="false" alt="Pomodoro"></button>
     <p class="tab-text centred-text" id="pomodoro-text">Pomodoro</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
   <div>
     <button class="tab" id="food-button"><img src="tab_icons/food.png" draggable="false" alt="Food"></button>
     <p class="tab-text centred-text" id="food-text">Food Basket</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
   <div>
     <button class="tab" id="shop-button"><img src="tab_icons/shop.png" draggable="false" alt="Shop"></button>
     <p class="tab-text centred-text" id="shop-text">Shop</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
   <div>
     <button class="tab" id="pets-button"><img src="tab_icons/pets.png" draggable="false" alt="Pets"></button>
     <p class="tab-text centred-text" id="pets-text">Pet Gallery</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
   <div>
     <button class="tab" id="leaderboard-button"><img src="tab_icons/leaderboard.png" draggable="false" alt="Leaderboard"></button>
     <p class="tab-text centred-text" id="leaderboard-text">Leaderboard</p>
+    <img src="tab_icons/active_tab.png" class="active-line" />
   </div>
 </div>
 
